@@ -2,6 +2,8 @@
 	  when using posix_openpt.
 	- remove support for writing lastlog when the lastlog file is a
 	  directory, no system is known to require this code.
+	- do not clear ut_user in utmpx logout records because
+	  pututxline fails otherwise on solaris
 	- Fix compilation on systems with bsd style utmp and no utmpx,
 	  such as openbsd.
 
